crates/reze_compiler/tests/snapshots/signal__async_component.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $signal } from \"reze-js\";\nexport async function Card(props) {\n  let n = $signal(1);\n  const user = await fetchUser(props.id);\n  return <p title={n} onClick={() => n += 1}>{user.name}{n}</p>;\n}"
---
import { signal } from "reze-js";
import { asyncComponent as _$asyncComponent, template as _$template, append as _$append, renderEffect as _$renderEffect, setAttribute as _$setAttribute, delegateEvents as _$delegateEvents } from "reze-js";
export function Card(props) {
  return _$asyncComponent(async () => {const [n, setN] = signal(1);
  const user = await fetchUser(props.id);
return [n, setN, user];
}, (_v$) => {
  {
  var _el$ = _$template("<p>");
  _el$.$$click = () => _v$()[1](_v$()[0]() + 1);
  _$append(_el$, () => _v$()[2].name);
  _$append(_el$, () => _v$()[0]());
  _$renderEffect(() => _$setAttribute(_el$, "title", _v$()[0]()));
  return _el$;
}
});}
_$delegateEvents(["click"]);
