crates/reze_compiler/tests/snapshots/signal__computed_async_component.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $computed, $signal } from \"reze-js\";\nexport async function Card(props) {\n  let n = $signal(1);\n  const user = await fetchUser(props.id);\n  const title = $computed(user.name + n);\n  return <p title={title} onClick={() => n += 1}>{title}</p>;\n}"
---
import { computed, signal } from "reze-js";
import { asyncComponent as _$asyncComponent, template as _$template, insert as _$insert, renderEffect as _$renderEffect, setAttribute as _$setAttribute, delegateEvents as _$delegateEvents } from "reze-js";
export function Card(props) {
  return _$asyncComponent(async () => {const [n, setN] = signal(1);
  const user = await fetchUser(props.id);
return [n, setN, user];
}, (_v$) => {
  const title = computed(() => _v$()[2].name + _v$()[0]());
  {
  var _el$ = _$template("<p>");
  _el$.$$click = () => _v$()[1](_v$()[0]() + 1);
  _$insert(_el$, title);
  _$renderEffect(() => _$setAttribute(_el$, "title", title()));
  return _el$;
}
});}
_$delegateEvents(["click"]);
