crates/reze_compiler/tests/snapshots/signal__computed_counter.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $computed, $signal } from \"reze-js\";\nlet count = $signal(0);\nconst doubled = $computed(count * 2);\nconst label = $computed({ text: `x${doubled}` }, { name: \"label\" });\nexport const view = <button onClick={() => count += 1}>{label.text}: {doubled}</button>;"
---
import { computed, signal } from "reze-js";
import { template as _$template, insert as _$insert, append as _$append, delegateEvents as _$delegateEvents } from "reze-js";
const [count, setCount] = signal(0);
const doubled = computed(() => count() * 2);
const label = computed(() => ({ text: `x${doubled()}` }), { name: "label" });
export const view = (() => {
  var _el$ = _$template("<button>: "),
    _el$2 = _el$.firstChild;
  _el$.$$click = () => setCount(count() + 1);
  _$insert(_el$, () => label().text, _el$2);
  _$append(_el$, doubled);
  return _el$;
})();
_$delegateEvents(["click"]);
