crates/reze_compiler/tests/snapshots/signal__counter.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $signal } from \"reze-js\";\nlet count = $signal(0);\nconst label = $signal(\"clicks\");\nexport const view = (\n  <button onClick={() => count += 1}>{label}: {count}</button>\n);"
---
import { signal } from "reze-js";
import { template as _$template, append as _$append, delegateEvents as _$delegateEvents } from "reze-js";
const [count, setCount] = signal(0);
const label = "clicks";
export const view = (
  (() => {
  var _el$ = _$template("<button>clicks: ");
  _el$.$$click = () => setCount(count() + 1);
  _$append(_el$, count);
  return _el$;
})()
);
_$delegateEvents(["click"]);

// info
[SIGNAL_FOLDED] `label` is never written and every read is a call, so it compiled to a plain constant.
  at case.tsx:3:7
  2 | let count = $signal(0);
> 3 | const label = $signal("clicks");
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^
  4 | export const view = (
