crates/reze_compiler/tests/snapshots/signal__folded_when_never_written.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $signal } from \"reze-js\";\nlet title = $signal(\"Reze\");\nconst fixed = $signal(1);\nlet count = $signal(0);\nexport const view = <h1 onClick={() => count += 1}>{title}: {fixed} {count}</h1>;"
---
import { signal } from "reze-js";
import { template as _$template, append as _$append, delegateEvents as _$delegateEvents } from "reze-js";
const title = "Reze";
const fixed = 1;
const [count, setCount] = signal(0);
export const view = (() => {
  var _el$ = _$template("<h1>Reze: 1 ");
  _el$.$$click = () => setCount(count() + 1);
  _$append(_el$, count);
  return _el$;
})();
_$delegateEvents(["click"]);

// info
[SIGNAL_FOLDED] `title` is never written and every read is a call, so it compiled to a plain constant.
  at case.tsx:2:5
  1 | import { $signal } from "reze-js";
> 2 | let title = $signal("Reze");
    |     ^^^^^^^^^^^^^^^^^^^^^^^
  3 | const fixed = $signal(1);
// info
[SIGNAL_FOLDED] `fixed` is never written and every read is a call, so it compiled to a plain constant.
  at case.tsx:3:7
  2 | let title = $signal("Reze");
> 3 | const fixed = $signal(1);
    |       ^^^^^^^^^^^^^^^^^^
  4 | let count = $signal(0);
