crates/reze_compiler/tests/snapshots/signal__read_once_warning.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $signal, computed } from \"reze-js\";\nlet count = $signal(0);\nexport function Counter() {\n  const doubled = count * 2;\n  const live = computed(() => count * 2);\n  const view = <b>{count}</b>;\n  const again = $signal(count);\n  return <p onClick={() => count += 1}>{doubled}{live()}</p>;\n}"
---
import { signal, computed } from "reze-js";
import { template as _$template, insert as _$insert, append as _$append, delegateEvents as _$delegateEvents } from "reze-js";
const [count, setCount] = signal(0);
export function Counter() {
  const doubled = count() * 2;
  const live = computed(() => count() * 2);
  const view = (() => {
  var _el$ = _$template("<b>");
  _$insert(_el$, count);
  return _el$;
})();
  const again = count();
  {
  var _el$2 = _$template("<p>");
  _el$2.$$click = () => setCount(count() + 1);
  _$append(_el$2, doubled);
  _$append(_el$2, live);
  return _el$2;
}
}
_$delegateEvents(["click"]);

// warn
[SIGNAL_READ_ONCE] `doubled` copies `count` once, when the component runs, and never updates. Read `count` where the value is used, or derive it with `$computed(…)`.
  at case.tsx:4:19
  3 | export function Counter() {
> 4 |   const doubled = count * 2;
    |                   ^^^^^
  5 |   const live = computed(() => count * 2);
// info
[SIGNAL_FOLDED] `again` is never written and every read is a call, so it compiled to a plain constant.
  at case.tsx:7:9
  6 |   const view = <b>{count}</b>;
> 7 |   const again = $signal(count);
    |         ^^^^^^^^^^^^^^^^^^^^^^
  8 |   return <p onClick={() => count += 1}>{doubled}{live()}</p>;
