crates/reze_compiler/tests/snapshots/signal__typed_declaration.snap
---
source: crates/reze_compiler/tests/signal.rs
expression: "import { $signal } from \"reze-js\";\nlet count: number | undefined = $signal();\nlet list: string[] = $signal<string[]>([]);\nexport const view = <p onClick={() => count = 1}>{count}{list}</p>;"
---
import { signal } from "reze-js";
import { template as _$template, append as _$append, delegateEvents as _$delegateEvents } from "reze-js";
const [count, setCount] = signal<number | undefined>();
const [list] = signal<string[]>([]);
export const view = (() => {
  var _el$ = _$template("<p>");
  _el$.$$click = () => setCount(1);
  _$append(_el$, count);
  _$append(_el$, list);
  return _el$;
})();
_$delegateEvents(["click"]);
